--- a/src/app/generic/text/text.component.html
+++ b/src/app/generic/text/text.component.html
@@ -21,8 +21,8 @@
                 <div class="container tab-pane active" id="text">
                     <p class="card-text " [innerHTML]="section.descripcion"></p>
                 </div>
-                <div class="container tab-pane fade" id="gallery">
-                    <app-gallery-list [folder]="section.nombre" [tagSection]="category" [tagFather]="father" [tagFatherLevel]="level" [tagItemId]="section.idSeccion"></app-gallery-list>
+                <div class="container tab-pane fade" id="gallery" (click)="getSonLevel()">
+                    <app-gallery-list [folder]="section.nombre" [tagSection]="category" [tagLevel]="sonLevel" [tagItemId]="section.idSeccion"></app-gallery-list>
                 </div>
             </div>
         </div>
