--- a/src/app/generic/gallery-list/gallery-list.component.html
+++ b/src/app/generic/gallery-list/gallery-list.component.html
@@ -24,9 +24,9 @@
 
 <ng-template #text>
     <div class="card card_small_with_image grid-item" *ngFor="let item of gallerylist">
-        <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{level}}/{{foldername}}/{{item.imagenGaleria}}/{{section}}/{{item.carpeta}}" alt="">
+        <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagenGaleria}}/{{section}}/{{item.carpeta}}" alt="">
         <div class="card-body">
-            <div class="card-title card-title-small" (click)="getSonLevel()">
+            <div class="card-title card-title-small">
                 <a [routerLink]="['/text', item.idCategoria,sonLevel,section]">
                     <p [innerHTML]="item.nombre"></p>
                 </a>
