--- a/src/app/generic/text/text.component.html
+++ b/src/app/generic/text/text.component.html
@@ -1,7 +1,7 @@
 <div class="row row-lg-eq-height">
     <div class="card card_largest_with_image grid-item">
-        <img *ngIf="section.carpeta" class="card-img-top" src="{{configService.serverNodeLocation}}images/{{level}}/{{section.nombre}}/{{section.imagen}}/{{category}}/{{section.carpeta}}">
-        <img *ngIf="!section.carpeta" class="card-img-top" src="{{configService.serverNodeLocation}}images/{{level}}/{{section.nombre}}/{{section.imagen}}/{{category}}/none">
+        <img *ngIf="baseFolder" class="card-img-top" src="{{configService.serverNodeLocation}}images/{{level}}/{{section.nombre}}/{{section.imagen}}/{{category}}/{{baseFolder}}">
+        <img *ngIf="!baseFolder" class="card-img-top" src="{{configService.serverNodeLocation}}images/{{level}}/{{section.nombre}}/{{section.imagen}}/{{category}}/none">
         <div class="card-body">
             <div class="card-title"><span style="color: rgba(0,0,0,1);"><h3 [innerHTML]="section.titulo"></h3></span></div>
 
@@ -21,8 +21,8 @@
                 <div class="container tab-pane active" id="text">
                     <p class="card-text " [innerHTML]="section.descripcion"></p>
                 </div>
-                <div class="container tab-pane fade" id="gallery" (click)="getSonLevel()">
-                    <app-gallery-list [folder]="section.nombre" [tagSection]="category" [tagLevel]="sonLevel" [tagItemId]="section.idSeccion"></app-gallery-list>
+                <div class="container tab-pane fade" id="gallery">
+                    <app-gallery-list [folder]="section.nombre" [tagSection]="category" [tagLevel]="level" [tagItemId]="section.idSeccion"></app-gallery-list>
                 </div>
             </div>
         </div>
