--- a/src/assets/css/category.css
+++ b/src/assets/css/category.css
@@ -31,7 +31,9 @@
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Work+Sans:300,400,500,600,700,800,900');
+
+/* @import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Work+Sans:300,400,500,600,700,800,900'); */
+
 
 /*********************************
 2. Body and some general stuff
