--- a/src/app/generic/text/text.component.html
+++ b/src/app/generic/text/text.component.html
@@ -21,8 +21,14 @@
                 <div class="container tab-pane active" id="text">
                     <p class="card-text " [innerHTML]="section.descripcion"></p>
                 </div>
-                <div class="container tab-pane fade" id="gallery">
+                <div  *ngIf="level === 3 && category ==='collection'" class="container tab-pane fade" id="gallery">
                     <app-gallery-list [folder]="section.nombre" [tagSection]="category" [tagLevel]="level" [tagItemId]="section.idSeccion"></app-gallery-list>
+                </div>
+                <div *ngIf="level === 2 && category ==='collection'" class="container tab-pane fade" id="gallery">
+                    <app-gallery-list [folder]="section.nombre" [tagSection]="category" [tagLevel]="level" [tagItemId]="section.idCategoria"></app-gallery-list>
+                </div>
+                <div *ngIf="level === 2 && category ==='samples'"class="container tab-pane fade" id="gallery">
+                    <app-gallery-list [folder]="section.nombre" [tagSection]="category" [tagLevel]="level" [tagItemId]="section.idMuestra"></app-gallery-list>
                 </div>
             </div>
         </div>
