--- a/src/app/generic/gallery-list/gallery-list.component.html
+++ b/src/app/generic/gallery-list/gallery-list.component.html
@@ -2,18 +2,18 @@
     <div *ngIf="section=== 'tales'; then tale"> </div>
     <div *ngIf="section=== 'store'; then store"> </div>
     <div *ngIf="section=== 'vpost'; then vpost"> </div>
-    <div *ngIf="level===3 && section === 'collection'; then text"> </div>
+    <div *ngIf="level===3 && section === 'collection'; then textCollection"> </div>
     <div *ngIf="level===2 && section === 'collection'; then item"> </div>
-    <div *ngIf="level===3 && section === 'samples'; then text"> </div>
+    <div *ngIf="level===3 && section === 'samples'; then textSamples"> </div>
     <div *ngIf="level===2 && section === 'samples'; then item"> </div>
 </div>
 
 <ng-template #item>
     <div class="card card_small_with_image grid-item" *ngFor="let item of gallerylist">
-        <img class="card-img-top" src="{{config.serverNodeLocation}}" alt="">
+        <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{item.carpeta}}/{{item.imagen}}/{{section}}/{{foldername}}" alt="">
         <div class="card-body">
             <div class="card-title card-title-small">
-                <a [routerLink]="['/item', item.idItem, section]">
+                <a [routerLink]="['/text', item.idItem,sonLevel,section]">
                     <p [innerHTML]="item.nombre"></p>
                 </a>
             </div>
@@ -36,7 +36,21 @@
     </div>
 </ng-template>
 
-<ng-template #text>
+<ng-template #textSamples>
+    <div class="card card_small_with_image grid-item" *ngFor="let item of gallerylist">
+        <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{item.carpeta}}/{{item.imagenGaleria}}/{{section}}/{{foldername}}" alt="">
+        <div class="card-body">
+            <div class="card-title card-title-small">
+                <a [routerLink]="['/text', item.idMuestra,sonLevel,section]">
+                    <p [innerHTML]="item.nombre"></p>
+                </a>
+            </div>
+        </div>
+
+    </div>
+</ng-template>
+
+<ng-template #textCollection>
     <div class="card card_small_with_image grid-item" *ngFor="let item of gallerylist">
         <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{item.carpeta}}/{{item.imagenGaleria}}/{{section}}/{{foldername}}" alt="">
         <div class="card-body">
