--- a/src/assets/css/category.css
+++ b/src/assets/css/category.css
@@ -328,7 +328,7 @@ section {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px;
     font-weight: 700;
-    color: rgba(255, 255, 255, 0.5);
+    color: #2f2f2f;
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
@@ -338,7 +338,7 @@ section {
 
 .main_nav ul li a:hover,
 .main_nav ul li.active a {
-    color: rgba(255, 255, 255, 1);
+    color: #000000;
 }
 
 
