--- a/src/assets/css/main_styles.css
+++ b/src/assets/css/main_styles.css
@@ -264,7 +264,7 @@ section {
 *********************************/
 
 .header {
-    position: fixed;
+    position: initial;
     top: 0;
     left: 0;
     width: 100%;
@@ -277,7 +277,6 @@ section {
 }
 
 .header_content {
-    height: 106px;
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
@@ -286,12 +285,31 @@ section {
 }
 
 .header.scrolled {
-    background: rgba(0, 0, 0, 0.75);
+    position: fixed;
+    background: rgba(247, 247, 247, 0.932);
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.header.scrolled .header_content .scrolled-logo {
+    display: none;
+}
+
+.header.scrolled .header_content .logo a {
+    display: block;
 }
 
 .header.scrolled .header_content {
     height: 80px;
+    display: flex;
+    align-items: center;
+}
+
+.hidde-on-scrool.scrolled {
+    display: none;
+}
+
+.main_nav {
+    text-align: center;
 }
 
 
@@ -300,9 +318,10 @@ section {
 *********************************/
 
 .logo a {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 20px;
-    color: #FFFFFF;
+    display: none;
+    font-family: 'BeyondTheMountains';
+    font-size: 30px;
+    color: rgb(0, 0, 0);
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 0.075em;
@@ -314,7 +333,8 @@ section {
 *********************************/
 
 .main_nav {
-    margin-left: 46px;
+    /* margin-left: 46px; */
+    text-align: center;
 }
 
 .main_nav ul li {
@@ -329,7 +349,7 @@ section {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px;
     font-weight: 700;
-    color: rgba(255, 255, 255, 0.5);
+    color: #2f2f2f;
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
@@ -337,9 +357,40 @@ section {
     transition: all 200ms ease;
 }
 
+a:hover {
+    color: none;
+}
+
 .main_nav ul li a:hover,
 .main_nav ul li.active a {
-    color: rgba(255, 255, 255, 1);
+    color: #000000;
+}
+
+.site-title {
+    font-size: 112px;
+}
+
+.site-title {
+    font-size: 72px;
+    font-family: 'BeyondTheMountains';
+    text-align: center;
+}
+
+.site-branding {
+    padding: 40px 0;
+}
+
+.site-title a {
+    color: #2f2f2f;
+    text-decoration: none;
+}
+
+.site-title a:hover {
+    color: #2f2f2f;
+    text-decoration: none;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-shadow: none;
+    text-shadow: none;
 }
 
 
@@ -442,11 +493,11 @@ section {
 
 .hamburger i {
     font-size: 20px;
-    color: rgba(255, 255, 255, 1);
+    color: rgb(0, 0, 0);
 }
 
 .hamburger:hover i {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(32, 32, 32, 0.5);
 }
 
 
@@ -725,7 +776,8 @@ section {
 }
 
 .similar_posts_container {
-    position: absolute;
+    margin-top: 40px;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
