--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,7 +177,7 @@
                             Copyright &copy;
                             <script>
                                 document.write(new Date().getFullYear());
-                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            </script> Todos los derechos reservados | Diseño y desarrollo <i class="fa fa-heart-o" aria-hidden="true"></i> por <a href="https://colorlib.com" target="_blank">LocalsJobsCompany</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                     </div>
@@ -187,15 +187,31 @@
                         <div class="subscribe_background"></div>
                         <div class="subscribe_content">
                             <div class="additional_content">
-                                <ul>
-                                    <li><a style="font-family: 'Ubuntu', sans-serif;font-size: 14px;font-weight: 700; color: rgba(255,255,255,0.5);" (click)="open(contact)">Contacto</a></li>
-                                    <li><a style="font-family: 'Ubuntu', sans-serif;font-size: 14px;font-weight: 700; color: rgba(255,255,255,0.5);" (click)="open(aboutUs)">Quienes
+                                <!-- <ul>
+                                    <li><a (click)="open(contact)">Contacto</a></li>
+                                    <li><a (click)="open(aboutUs)">Quienes
                                                 Somos</a></li>
-                                    <li><a style="font-family: 'Ubuntu', sans-serif;font-size: 14px;font-weight: 700; color: rgba(255,255,255,0.5);" (click)="open(news)">Noticias</a>
+                                    <li><a (click)="open(news)">Noticias</a>
                                     </li>
-                                    <li><a style="font-family: 'Ubuntu', sans-serif;font-size: 14px;font-weight: 700; color: rgba(255,255,255,0.5);" (click)="open(relatedSites)">Sitios
+                                    <li><a (click)="open(relatedSites)">Sitios
                                                 Relacionados</a></li>
-                                </ul>
+                                </ul> -->
+                                <div class="row align-items-center">
+                                    <div class="col-lg-12 col-sm-3 col-6">
+                                        <a (click)="open(contact)">Contacto</a>
+                                    </div>
+                                    <div class="col-lg-12 col-sm-3 col-6">
+                                        <a (click)="open(aboutUs)">Quienes
+                                            Somos</a>
+                                    </div>
+                                    <div class="col-lg-12 col-sm-3 col-6">
+                                        <a (click)="open(news)">Noticias</a>
+                                    </div>
+                                    <div class="col-lg-12 col-sm-3 col-6">
+                                        <a (click)="open(relatedSites)">Sitios
+                                            Relacionados</a>
+                                    </div>
+                                </div>
 
                                 <ng-template #contact let-modal>
                                     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
