--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,8 @@
                         <nav class="main_nav" style="margin-left: auto;">
                             <ul>
                                 <li (click)="categoryType.next('collection')" class="active"><a [routerLink]="['/collection', '1']">Inicio</a></li>
-                                <li (click)="categoryType.next('samples')"><a [routerLink]="['/samples', '2']">Estampas</a></li>
-                                <li (click)="categoryType.next('tale')"><a [routerLink]="['/tales', '3']">Muestras</a></li>
+                                <li (click)="categoryType.next('tales')"><a [routerLink]="['/tales', '2']">Estampas</a></li>
+                                <li (click)="categoryType.next('samples')"><a [routerLink]="['/samples', '3']">Muestras</a></li>
                                 <li (click)="categoryType.next('vpost')"><a [routerLink]="['/vpost', '6']">V-Post</a></li>
                                 <li (click)="categoryType.next('store')"><a [routerLink]="['/store', '7']">Tienda</a></li>
                             </ul>
