1/6/2020-{changes in Estampas, Muestras, V-post, Tienda. Fixed gallery of images and Category-List}

--- a/src/app/generic/category/category.component.html
+++ b/src/app/generic/category/category.component.html
@@ -8,7 +8,7 @@
         <div *ngIf="category === 'store'; then store"></div>
         <div *ngIf="category === 'samples' ; then otherSection"></div>
         <div *ngIf="category === 'tales' ; then otherSection"></div>
-        
+
         <ng-template #collection>
             <div *ngFor="let item of categoryList" class="col-lg-3 col-md-6 similar_post_col">
                 <div class="similar_post trans_200">
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </ng-template>
-        
+
         <ng-template #otherSection>
             <div *ngFor="let item of categoryList" class="col-lg-3 col-md-6 similar_post_col">
                 <div class="similar_post trans_200">
@@ -28,11 +28,11 @@
                 </div>
             </div>
         </ng-template>
-        
+
         <ng-template #vpost>
             <div *ngFor="let item of categoryList" class="col-lg-3 col-md-6 similar_post_col">
                 <div class="similar_post trans_200">
-                    <a [routerLink]="['/text',item.CategoriaPostal,sonLevel,category]">
+                    <a [routerLink]="['/gallery',item.idCategoriaPostal,sonLevel,category, item.nombre]">
                         <p [innerHTML]="item.nombre"></p>
                     </a>
                 </div>
@@ -41,7 +41,7 @@
         <ng-template #store>
             <div *ngFor="let item of categoryList" class="col-lg-3 col-md-6 similar_post_col">
                 <div class="similar_post trans_200">
-                    <a [routerLink]="['/gallery',item.idTematica,sonLevel,category]">
+                    <a [routerLink]="['/gallery',item.idTematica,sonLevel,category, item.nombre]">
                         <p [innerHTML]="item.nombre"></p>
                     </a>
                 </div>
