--- a/src/app/generic/gallery-list/gallery-list.component.html
+++ b/src/app/generic/gallery-list/gallery-list.component.html
@@ -15,9 +15,9 @@
                 {{item.nombre}}
             </h2>
         </div>
-        <a href="">
+        <button mat-button (click)="openDialog()">
             <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagen}}/{{section}}/{{baseFolder}}" alt="">
-        </a>
+        </button>
 
         <!-- <div class="card-body">
             <div class="card-title card-title-small">
