2/06/2020-Second copy of all project

--- a/src/app/generic/gallery-list/gallery-list.component.html
+++ b/src/app/generic/gallery-list/gallery-list.component.html
@@ -20,9 +20,9 @@
                 {{item.nombre}}
             </h2>
         </div>
-        <button mat-button (click)="openDialog()">
+        <a href="">
             <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagen}}/{{section}}/{{baseFolder}}" alt="">
-        </button>
+        </a>
     </div>
 </ng-template>
 
