--- a/src/app/generic/item/item.component.html
+++ b/src/app/generic/item/item.component.html
@@ -1,5 +1,22 @@
-<h1>Dialog</h1>
-<div mat-dialog-content>This.....</div>
-<div mat-dialog-actions>
-<button mat-button mat-dialog-close> Close</button>
-</div>
+<div class="modal fade" id="item_viewer">
+  <div class="modal-dialog">
+   <div class="modal-content">
+
+     <div class="modal-header">
+       <h4 class="modal-title"> Modal </h4>
+       <button type="button" class="close" data-dismiss="modal">&times;
+       </button>
+     </div>
+
+     <div class="modal-body">
+       <a [routerLink]="['/zoom', itemId]" >
+         <img >
+       </a>
+       <span></span>: <p></p>
+     </div>
+
+   </div>
+
+  </div>
+
+ </div>
